--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,17 @@
 
     <ul class="pages">
       <li><a href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Home</a></li>
+      <!--<li>
+        <div class="dropdown btn-group">
+          <button class="btn btn-categories dropdown-toggle btn-xs" type="button" data-toggle="dropdown">Years
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="{{ site.baseurl }}/posts-by-categories/">Categories</a></li>
+          </ul>
+        </div>
+      </li>-->
+      <li><a href="{{ site.baseurl }}/portfolio"><i class="fa fa-folder-open"></i> Portfolio</a></li>
       <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
       <li><a href="{{ site.baseurl }}/search/"><i class="fa fa-search"></i> Search</a></li>
     </ul>
