--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -1,4 +1,5 @@
 <p class="links">
+  {% if site.email %}<a href="mailto://{{ site.email }}" target="_new"><i class="fa fa-envelope-o"></i></a>{% endif %}
   {% if site.twitter_username %}<a href="https://www.twitter.com/{{ site.twitter_username }}" target="_new"><i class="fa fa-twitter"></i></a>{% endif %}
   {% if site.linkedin_link %}<a href="{{ site.linkedin_link }}" target="_new"><i class="fa fa-linkedin"></i></a>{% endif %}
   {% if site.google_plus_link %}<a href="{{ site.google_plus_link }}" target="_new"><i class="fa fa-google-plus"></i></a>{% endif %}
