--- a/css/style.scss
+++ b/css/style.scss
@@ -236,7 +236,7 @@ ul {
 	}
 
 	.author-header {
-		font-family: 'Montserrat', sans-serif;
+		font-family: 'Gill Sans MT', sans-serif;
 		color: $light-blue;
 		margin-top: 0px;
 		padding-top: 15px;
@@ -427,7 +427,7 @@ ul {
 	max-height: 100%;
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: 'Montserrat', sans-serif;
+		font-family: 'Gill Sans MT', sans-serif;
 		margin-bottom: 10px;
 	}
 
